--- a/style.css
+++ b/style.css
@@ -158,4 +158,17 @@ p.login-msg{
  }
 
 
+ .primary-navigation div  .menu-wrapper .main-navigation .sub-content{
+
+    display:none;
+ }
+
+ .primary-navigation div  .menu-wrapper .main-navigation:hover .sub-content{
+
+    display:block;
+ }
+
+
+ 
+
 
